   Thanks Dmitry Shachnev. (Debian #698010)
 * Move shared_libraries() and links_with_shared_library() from hookutils into
   fileutils, so that we can use it from apport-valgrind. Thanks to Kyle
   Nitzsche for the initial patch.
 * fileutils.shared_libraries(): Filter out virtual "linux-vdso" from result.
   Thanks Kyle Nitzsche.
 * apport-valgrind: Fix path to debug symbols in the sandbox.

2.8 (2013-01-08):
-----------------
Improvements:
 * Factor out sandbox management functions from apport-retrace into
   apport/sandboxutils.py, so that other programs can re-use the API easily.
   Thanks to Kyle Nitzsche for the initial work on this.
 * Generate a crash signature for kernel OOPSes.
 * Add "apport-valgrind" tool to produce valgrind reports in a temporary
   sandbox with debug symbols (similar to apport-retrace). Thanks Alex Chiang
   and Kyle Nitzsche!

Bug fixes:
 * Fix StacktraceAddressSignature generation on ARM. (LP: #1089778)
 * debian.py: Fix TypeError crash in payload generation. Thanks Ritesh Raj
   Sarraf.
 * apport_python_hook.py: Update "ExecutableTimestamp" field when mangling
   "ExecutablePath". (LP: #1077253)

2.7 (2012-12-10):
-----------------
Improvements:
 * packaging.py, get_file_package(): Add optional "release" and "arch"
   arguments for getting a file's package for a foreign release or
   architecture. Implement this for apt/dpkg backend.
 * packaging.py, install_packages(): Add optional "architecture" argument for
   creating a sandbox for a foreign architecture. Implement this for apt/dpkg
   backend.
 * When a report's architecture does not match the system architecture, try to
   use gdb-multiarch (if available, as packaged on Debian/Ubuntu), and set
   architecture and gnutarget accordingly in gdb. This supports x86, x86_64,
   and ARM for now, so that reports from all these architectures can be
   retraced on an x86_84 machine. (LP: #1044437)
 * launchpad.py: Add "architecture" option to process reports for a foreign